Actions
Bug #10847
closedfix smatch issue in zpool cmd
Start date:
2019-04-23
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage smatch
Gerrit CR:
Description
The print_vdev_stats() function in the zpool cmd is causing smatch problems.
Updated by John Levon about 3 years ago
- Tags changed from needs-triage to needs-triage smatch
Updated by Electric Monk about 3 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 95fa23b1c91c8660ef64ef5a20acfcd53961746e
commit 95fa23b1c91c8660ef64ef5a20acfcd53961746e Author: Jerry Jelinek <jerry.jelinek@joyent.com> Date: 2019-04-26T19:02:53.000Z 10847 fix smatch issue in zpool cmd Reviewed by: John Levon <john.levon@joyent.com> Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions